--- a/app/src/main/res/layout/activity_list_operations.xml
+++ b/app/src/main/res/layout/activity_list_operations.xml
@@ -42,7 +42,7 @@
             <Spinner
 
                 android:id="@+id/Currencyspinner"
-                android:layout_width="64dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="20dp"
@@ -123,7 +123,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
         android:orientation="vertical">
 
     </android.support.v7.widget.RecyclerView>
