--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -42,18 +42,6 @@
             android:layout_marginTop="10dp"
             android:layout_weight="0.08">
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="232dp"
-                android:layout_marginRight="232dp"
-                android:width="50dp"
-                android:contextClickable="true" />
-
             <TextView
                 android:id="@+id/amountText"
                 android:layout_width="wrap_content"
@@ -80,6 +68,17 @@
                 android:text="12345"
                 android:textAlignment="viewEnd"
                 android:textSize="22sp" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/amountValue"
+                android:layout_alignBottom="@+id/amountValue"
+                android:layout_centerHorizontal="true"
+                android:width="50dp"
+                android:contextClickable="true"
+                android:textAlignment="viewEnd" />
         </RelativeLayout>
 
         <RelativeLayout
